spacing, favicon logo fix

--- a/css/main.css
+++ b/css/main.css
@@ -395,7 +395,7 @@ a,a:hover, .overlay, img, .form-control,  .form-control:hover, button{
 .header-section{
     background-color: #fff;
     width: 100%;
-    height: 80px;
+    height: auto;
     z-index: 99;
     position: fixed;
     left: 0;
@@ -407,7 +407,7 @@ a,a:hover, .overlay, img, .form-control,  .form-control:hover, button{
     -moz-box-shadow: 0 2px 5px rgba(16,16,16,.08);
     -webkit-box-shadow: 0 2px 5px rgba(16,16,16,.08);
     box-shadow: 0 2px 5px rgba(16,16,16,.08);
-    height: 80px;
+    height: auto;
     border-bottom: 0;
     padding: 0;
 }
@@ -463,6 +463,10 @@ a,a:hover, .overlay, img, .form-control,  .form-control:hover, button{
 .navbar-header .nav-btn:hover,
 .navbar-header .nav-btn:focus{
     opacity: 0.8;
+}
+
+.navbar-brand img{
+    width: 150px;
 }
 /*Dropdown Style
 ==================*/
@@ -833,6 +837,7 @@ ul.nav > li > a.active{
 }
 .about-carousel{
     width: 400px;
+    max-width: calc(100vw - 30px);
     height: auto;
     padding: 100px 0;
     margin-left: auto;
@@ -2295,6 +2300,10 @@ blockquote span{
     color: #ababc7;
     margin: 0;
 }  
+
+.footer .widget-content img{
+    width: 150px;
+}
 
 /* ==========================================================================
    Scroll To Top
